[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/taskbar.png" type="Texture" id=1]
[ext_resource path="res://scenes/Cursor.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/main.gd" type="Script" id=3]
[ext_resource path="res://scripts/bugspawner.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/w95fa.woff" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/documentspawner.gd" type="Script" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 800, 0, 0, 0, 0, 0, 800, 600, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="DynamicFont" id=2]
size = 13
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Base" type="Node2D"]
script = ExtResource( 3 )

[node name="Walls" type="StaticBody2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
build_mode = 1
polygon = PoolVector2Array( 800, 0, 800, 600, 0, 600, 0, 0 )

[node name="Cursor" parent="." instance=ExtResource( 2 )]
position = Vector2( 400, 300 )

[node name="Documents" type="Node2D" parent="."]
z_index = 1
script = ExtResource( 6 )

[node name="DocumentSpawnArea" type="ReferenceRect" parent="Documents"]
margin_left = 48.0
margin_top = 40.0
margin_right = 744.0
margin_bottom = 528.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bugs" type="Node2D" parent="."]
z_index = 3
script = ExtResource( 4 )

[node name="SpawnTimer" type="Timer" parent="Bugs"]
wait_time = 20.0
autostart = true

[node name="Spawn" type="Path2D" parent="Bugs"]
curve = SubResource( 1 )

[node name="SpawnPath" type="PathFollow2D" parent="Bugs/Spawn"]

[node name="Taskbar" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Taskbar"]
position = Vector2( 400, 587 )
texture = ExtResource( 1 )

[node name="Start" type="Label" parent="Taskbar"]
margin_left = 30.0
margin_top = 581.0
margin_right = 116.0
margin_bottom = 595.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Bugs/SpawnTimer" to="Bugs" method="_on_SpawnTimer_timeout"]
